# AgentBase

./: Dockerfile  Makefile  README.md  bootstrap.md  config.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_prompt_engineering_playground.ipynb  02_short_term_memory.ipynb  03_long_term_memory.ipynb  04_tool_calling_playground.ipynb
src/agent_project/: __init__.py
src/agent_project/application/add_new_agent_service/: service.py
src/agent_project/application/add_new_tool_service/: service.py
src/agent_project/application/conversation_service/: service.py
src/agent_project/application/evaluation_service/: service.py
src/agent_project/application/rule_engine/: __init__.py  evaluator.py  models.py  service.py  storage.py
src/agent_project/core/agent/: agent.py
src/agent_project/core/prompts/: templates.py
src/agent_project/core/tools/: alerts.py  vitals.py
src/agent_project/core/utils/: validators.py
src/agent_project/infrastructure/api/: app.py
src/agent_project/infrastructure/llm_clients/: openai_client.py
src/agent_project/infrastructure/monitoring/: logger.py
src/agent_project/infrastructure/vector_database/: memory.py
tests/: test_agent.py  test_memory.py  test_rule_engine.py
tools/: delete_long_term_memory.py  evaluate_agent.py  finetune_agent_llm.py  generate_evaluation_dataset.py  manage_rules.py  populate_long_term_memory.py  run_agent.py
