[tool.poetry]
name = "agent-project"
version = "0.1.0"
description = "Health monitoring and alerting agent for aged/special-care individuals"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "agent_project", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.9"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
